# pi_game_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
app/: CMakeLists.txt
app/include/: app.hpp  app_config.hpp  app_constants.hpp
app/src/: app.cpp
commons/: CMakeLists.txt
commons/include/: sparse_set.hpp
commons/src/: commons.cpp
core/: CMakeLists.txt
core/include/: app.hpp  base_component.hpp  base_object.hpp  camera.hpp  camera_transform.hpp  constants.hpp  core_constants.hpp  event_handle.hpp  event_manager.hpp  events.hpp  layer.hpp  layer_stack.hpp  lights.hpp  logger.hpp  materials.hpp  registry.hpp  renderer.hpp  resource.hpp  resource_manager.hpp  selectable.hpp  shader.hpp  sparse_set.hpp  transform.hpp  utils.hpp  vertex.hpp  vertex_array.hpp  window.hpp
core/src/: app.cpp  base_component.cpp  base_object.cpp  camera.cpp  camera_transform.cpp  event_manager.cpp  events.cpp  registry.cpp  renderer.cpp  shader.cpp  texture.cpp  transform.cpp  vertex.cpp  vertex_array.cpp  window.cpp
ecs/: CMakeLists.txt
ecs/include/: sparse_set.hpp
ecs/lib/: registry.cpp
events/: CMakeLists.txt
events/include/: event.hpp  event_manager.hpp
events/src/: event_manager.cpp
gl/: CMakeLists.txt
gl/include/: base_object.hpp  camera.hpp  camera_transform.hpp  events.hpp  gl_constants.hpp  gl_events.hpp  gl_utils.hpp  lights.hpp  materials.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  texture.hpp  transform.hpp  utils.hpp  vertex.hpp  vertex_array.hpp  window.hpp
gl/src/: base_component.cpp  camera.cpp  camera_transform.cpp  events.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp  transform.cpp  vertex.cpp  vertex_array.cpp  window.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
inputs/: CMakeLists.txt
inputs/include/: inputs.hpp  inputs_constants.hpp  inputs_events.hpp  mode_manager.hpp  modes.hpp  state_manager.hpp  states.hpp
inputs/src/: inputs.cpp  mode_manager.cpp  state_manager.cpp
res/inputs/: keyboard_shortcuts.json
res/shaders/: basic.frag  basic.vert  multiple_lights.frag  shader.frag  shader.vert  texture_material.frag  texture_material.vert
src/: CMakeLists.txt  app.cpp  app.hpp  app_config.hpp  main.cpp
stb_image/: CMakeLists.txt
stb_image/include/: stb_image.hpp
ui/: CMakeLists.txt
ui/include/: camera_controls.hpp  commons.hpp  components.hpp  entities.hpp  light_controls.hpp  transform_controls.hpp  ui.hpp  ui_constants.hpp  ui_layer.hpp
ui/src/: camera_controls.cpp  components.cpp  entities.cpp  light_controls.cpp  transform_controls.cpp  ui.cpp
